--- a/index.css
+++ b/index.css
@@ -37,3 +37,26 @@
  <h1>bom dia so pra quem fez o curso</h1>
  <i class="fa-solid fa-phone"></i>
 </body>
+
+ </header>
+  <main id=´´last.jobs=container´´class=wrappe´´>
+     </main>
+   <h1>ultima vagas conviadas
+</h1>
+   <ul>
+   <li>
+<a href=´´#´´class="clickarca´´>
+   </a>
+      <li>
+   </li>
+   </ul>
+   <div class="company_box``>
+        <img src="img``//goooglelogo.png´´>
+   <div class=``compang-infio``>
+   <h3> develope
+       </h3>
+   <p>google
+   </p>
+   </div>
+   <div>
+
